# simdjson_talks

./: .gitignore  .marp-talks  README.md  index.html
.github/workflows/: marp-pages.yml
cppcon2025/: assembly_analysis_slides.md  compiler_explorer_instruction_comparison.asm  compiler_explorer_manual_vs_reflection.cpp  compiler_explorer_serialization_reflection_based.asm  cppcon_2025_slides.html  cppcon_2025_slides.md  cppcon_2025_slides_old.md  cppcon_2025_slides_preview.html  generate_charts.py  instruction_count_analysis.md  presentation.html  presentation.md  proposal.md  starting_text.md
cppcon2025/data/: parsingtwitterapplem2max.txt  parsingtwitterapplem3max.txt  serializationtwitterapplem3max.txt
cppcon2025/go/: json.go  parse_twitter.go  reflect.go
cppcon2025/images/: alice.html  barsimdjson.py  generate_bonus_charts.py  generate_perf_charts.py  simdjsondesign.html
cppcon2025/java/: ReflectionExample.java
cppcon2025/software/: CMakeLists.txt  README.md  main.cpp  webservice.cpp
cppcon2025/software/examples/: dispatch.cpp
css/: styles.css
scripts/: marpit.sh
